# sync_transcript

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json
firebase/: admin.ts  auth.ts  config.ts  database.ts  storage.ts
make_contents/: README.md  example_EN_M.csv  example_scripts.csv  make_contents.py  pyproject.toml
src/app/: layout.tsx  page.tsx
src/app/audience-debug/[id]/: page.tsx
src/app/audience-old/[id]/: page.tsx
src/app/audience/[id]/: page.tsx
src/app/conference/[id]/: page.tsx
src/app/conference/[id]/control/: page.tsx
src/app/conference/[id]/speaker/: page.tsx
src/app/conference/[id]/transcript/: page.tsx
src/app/presenter/[id]/: page.tsx
src/app/speaker/[id]/: page.tsx
src/app/transcript/[id]/: page.tsx
