[tool.poetry]
name = "make-contents"
version = "0.1.0"
description = ""
authors = ["makiart <haruki3968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase-admin = "^6.2.0"
google-cloud-texttospeech = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
