[project]
name = "make-contents"
version = "0.1.0"
description = ""
authors = [{ name = "makiart", email = "haruki3968@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "firebase-admin>=6.2.0,<7",
    "google-cloud-texttospeech>=2.14.2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
